crates/trunk-ir/src/dialect/snapshots/trunk_ir__dialect__arith__canonicalize_tests__add_zero_fold_rhs_zero.snap
---
source: crates/trunk-ir/src/dialect/arith.rs
expression: "print_module(&ctx, module.op())"
---
core.module @test {
  func.func @f(%0: core.i32) -> core.i32 {
      %1 = arith.const {value = 0} : core.i32
      func.return %0
  }
}
